Fixed event contact spacing part6

--- a/master_style.css
+++ b/master_style.css
@@ -1014,12 +1014,11 @@ a>.schedule:hover {
 		margin:auto;
 		text-align:center;
 		margin-bottom:20px;
-		margin-top:0;
 		border-style:solid;
 		border-color:rgba(13, 32, 52, 0.5);
 		border-width:5px;
-		width:120px;
-		height:120px;
+		width:100%;
+		height:auto;
 	}
 
 	.modal .img-circle {
